--- a/Makeover Monday Week 14/index.html
+++ b/Makeover Monday Week 14/index.html
@@ -20,6 +20,8 @@
               size: '60%',
               background: 'transparent',
               image: 'coin.png',
+              imageWidth: 350,
+              imageHeight: 350,
               imageClipped: false
             },
             dataLabels: {
