--- a/Makeover Monday Week 14/index.html
+++ b/Makeover Monday Week 14/index.html
@@ -16,13 +16,13 @@
             startAngle: 0,
             endAngle: 360,
             hollow: {
-              margin: 0,
+              margin: 5,
               size: '60%',
-              background: 'transparent',
+              background:"#ffee58",
               image: 'coin.png',
-              imageWidth: 220,
-              imageHeight: 220,
-              imageClipped: false
+              imageOffsetX: 0,
+              imageOffsetY: 0,
+              imageClipped: false,
             },
             dataLabels: {
               name: {
