--- a/Makeover Monday Week 14/index.html
+++ b/Makeover Monday Week 14/index.html
@@ -23,6 +23,7 @@
               imageOffsetX: 0,
               imageOffsetY: 0,
               imageClipped: false,
+              position: 'front',
             },
             dataLabels: {
               name: {
