--- a/Makeover Monday Week 14/index.html
+++ b/Makeover Monday Week 14/index.html
@@ -20,10 +20,7 @@
               size: '60%',
               background:"#ffee58",
               image: 'coin.png',
-              imageOffsetX: 0,
-              imageOffsetY: 0,
-              imageClipped: false,
-              position: 'front',
+              imageClipped: true,
             },
             dataLabels: {
               name: {
