--- a/Makeover Monday Week 14/index.html
+++ b/Makeover Monday Week 14/index.html
@@ -18,8 +18,10 @@
             hollow: {
               margin: 5,
               size: '60%',
-              background:"#ffee58",
               image: 'coin.png',
+	      imageWidth: 256,
+              imageHeight: 256,
+              imageClipped: false
             },
             dataLabels: {
               name: {
