--- a/Makeover Monday Week 14/index.html
+++ b/Makeover Monday Week 14/index.html
@@ -1,12 +1,135 @@
 <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 <body>
-  <center><h1>The other side of the coin</h1></center>
-  <center><div id="chart"></center>
-</div>
-<script>var options = {
-          series: [76, 67],
+  <center><h1 id="title">The other side of the coin</h1>
+    <div id="chart"></div>
+  <select name="report-type" id="report-select">
+  </select>
+  <select name="report-type2" id="report-select2">
+    <option value="1">Paid and subsistence work</option>
+    <option value="2">Unpaid domestic, care and volunteer work</option>
+  </select>
+    <p>Explore how much time do men and women<br>
+      spend doing paid or unpaid work.</p>
+    </center>
+<script>
+    $('#report-select').on('change', function () {
+      drawChart();
+    });
+  
+    $('#report-select2').on('change', function () {
+      drawChart();
+    });
+  
+    var data = [{"Country":"Albania","TimeUM":0.83,"TimeUW":5.21,"TimePM":4.26,"TimePW":1.93},
+{"Country":"Algeria","TimeUM":0.9,"TimeUW":5.30,"TimePM":3.3,"TimePW":0.50},
+{"Country":"Argentina","TimeUM":2.05,"TimeUW":5.81,"TimePM":5.23,"TimePW":2.75},
+{"Country":"Armenia","TimeUM":1.05,"TimeUW":5.20,"TimePM":4.85,"TimePW":1.68},
+{"Country":"Australia","TimeUM":2.86,"TimeUW":5.21,"TimePM":4.55,"TimePW":2.35},
+{"Country":"Austria","TimeUM":2.08,"TimeUW":4.06,"TimePM":4.00,"TimePW":2.43},
+{"Country":"Azerbaijan","TimeUM":2.13,"TimeUW":6.10,"TimePM":4.66,"TimePW":1.73},
+{"Country":"Belarus","TimeUM":2.51,"TimeUW":4.86,"TimePM":4.63,"TimePW":3.20},
+{"Country":"Belgium","TimeUM":2.53,"TimeUW":3.91,"TimePM":2.95,"TimePW":1.86},
+{"Country":"Benin","TimeUM":1.00,"TimeUW":3.25,"TimePM":3.91,"TimePW":3.91},
+{"Country":"Bhutan","TimeUM":1.48,"TimeUW":3.41,"TimePM":5.65,"TimePW":5.00},
+{"Country":"Bolivia (Plurinational State of)","TimeUM":1.30,"TimeUW":5.00,"TimePM":6.00,"TimePW":3.73},
+{"Country":"Brazil","TimeUM":0.75,"TimeUW":3.20,"TimePM":4.7,"TimePW":2.75},
+{"Country":"Bulgaria","TimeUM":2.21,"TimeUW":4.43,"TimePM":3.16,"TimePW":2.28},
+{"Country":"Cambodia","TimeUM":0.30,"TimeUW":3.00,"TimePM":6.30,"TimePW":4.50},
+{"Country":"Canada","TimeUM":2.83,"TimeUW":4.28,"TimePM":4.25,"TimePW":3.00},
+{"Country":"Chile","TimeUM":2.58,"TimeUW":5.80,"TimePM":4.63,"TimePW":2.66},
+{"Country":"China, Hong Kong Special Administrative Region","TimeUM":0.8,"TimeUW":2.70,"TimePM":4.1,"TimePW":2.80},
+{"Country":"Colombia","TimeUM":1.26,"TimeUW":4.35,"TimePM":5.61,"TimePW":2.81},
+{"Country":"Costa Rica","TimeUM":0.85,"TimeUW":4.51,"TimePM":4.85,"TimePW":2.06},
+{"Country":"Cuba","TimeUM":1.28,"TimeUW":3.91,"TimePM":5.98,"TimePW":3.73},
+{"Country":"Denmark","TimeUM":2.70,"TimeUW":3.75,"TimePM":3.45,"TimePW":2.25},
+{"Country":"Ecuador","TimeUM":1.11,"TimeUW":4.36,"TimePM":5.15,"TimePW":2.70},
+{"Country":"Estonia","TimeUM":2.81,"TimeUW":4.35,"TimePM":3.28,"TimePW":2.68},
+{"Country":"Ethiopia","TimeUM":2.08,"TimeUW":5.30,"TimePM":5.36,"TimePW":3.43},
+{"Country":"Finland","TimeUM":2.20,"TimeUW":3.41,"TimePM":3.36,"TimePW":2.70},
+{"Country":"France","TimeUM":2.40,"TimeUW":3.86,"TimePM":3.51,"TimePW":2.21},
+{"Country":"Germany","TimeUM":2.75,"TimeUW":4.16,"TimePM":3.31,"TimePW":2.15},
+{"Country":"Ghana","TimeUM":1.10,"TimeUW":3.71,"TimePM":6.51,"TimePW":4.88},
+{"Country":"Greece","TimeUM":1.55,"TimeUW":4.35,"TimePM":2.53,"TimePW":1.30},
+{"Country":"Guatemala","TimeUM":1.13,"TimeUW":6.58,"TimePM":5.98,"TimePW":2.06},
+{"Country":"Honduras","TimeUM":1.05,"TimeUW":3.25,"TimePM":4.40,"TimePW":1.90},
+{"Country":"Hungary","TimeUM":2.55,"TimeUW":4.75,"TimePM":3.35,"TimePW":2.20},
+{"Country":"India","TimeUM":0.45,"TimeUW":4.35,"TimePM":6.81,"TimePW":3.01},
+{"Country":"Iran (Islamic Republic of)","TimeUM":1.30,"TimeUW":5.08,"TimePM":4.68,"TimePW":0.68},
+{"Country":"Iraq","TimeUM":1.00,"TimeUW":5.78,"TimePM":3.90,"TimePW":0.46},
+{"Country":"Ireland","TimeUM":2.15,"TimeUW":4.93,"TimePM":5.10,"TimePW":2.70},
+{"Country":"Italy","TimeUM":1.80,"TimeUW":5.08,"TimePM":4.23,"TimePW":1.98},
+{"Country":"Japan","TimeUM":7.66,"TimeUW":3.65,"TimePM":5.43,"TimePW":2.76},
+{"Country":"Kazakhstan","TimeUM":1.90,"TimeUW":4.16,"TimePM":3.83,"TimePW":2.51},
+{"Country":"Kyrgyzstan","TimeUM":2.43,"TimeUW":4.11,"TimePM":3.60,"TimePW":2.01},
+{"Country":"Lao People's Democratic Republic","TimeUM":0.6,"TimeUW":2.50,"TimePM":4.90,"TimePW":3.90},
+{"Country":"Latvia","TimeUM":1.83,"TimeUW":3.93,"TimePM":6.61,"TimePW":3.88},
+{"Country":"Lesotho","TimeUM":1.48,"TimeUW":3.73,"TimePM":4.88,"TimePW":2.71},
+{"Country":"Lithuania","TimeUM":2.40,"TimeUW":4.66,"TimePM":5.21,"TimePW":3.85},
+{"Country":"Luxembourg","TimeUM":1.85,"TimeUW":3.66,"TimePM":4.03,"TimePW":2.75},
+{"Country":"Madagascar","TimeUM":9.16,"TimeUW":3.75,"TimePM":4.83,"TimePW":2.91},
+{"Country":"Malawi","TimeUM":0.3,"TimeUW":2.08,"TimePM":4.16,"TimePW":3.88},
+{"Country":"Malaysia","TimeUM":1.43,"TimeUW":4.58,"TimePM":0.00,"TimePW":0.00},
+{"Country":"Mali","TimeUM":0.6,"TimeUW":4.90,"TimePM":6.2,"TimePW":3.80},
+{"Country":"Malta","TimeUM":2.05,"TimeUW":5.01,"TimePM":3.63,"TimePW":1.35},
+{"Country":"Mauritius","TimeUM":1.21,"TimeUW":4.61,"TimePM":4.93,"TimePW":1.93},
+{"Country":"Mexico","TimeUM":2.56,"TimeUW":7.03,"TimePM":6.50,"TimePW":0.29},
+{"Country":"Mongolia","TimeUM":2.31,"TimeUW":4.83,"TimePM":5.80,"TimePW":3.96},
+{"Country":"Morocco","TimeUM":7.16,"TimeUW":5.00,"TimePM":5.41,"TimePW":1.35},
+{"Country":"Netherlands","TimeUM":2.58,"TimeUW":3.81,"TimePM":3.76,"TimePW":2.05},
+{"Country":"New Zealand","TimeUM":2.53,"TimeUW":4.33,"TimePM":4.21,"TimePW":2.38},
+{"Country":"Nicaragua","TimeUM":1.58,"TimeUW":4.66,"TimePM":5.56,"TimePW":2.31},
+{"Country":"Norway","TimeUM":2.36,"TimeUW":3.30,"TimePM":4.00,"TimePW":2.50},
+{"Country":"Oman","TimeUM":1.91,"TimeUW":4.56,"TimePM":3.11,"TimePW":0.96},
+{"Country":"Pakistan","TimeUM":4.66,"TimeUW":4.78,"TimePM":5.35,"TimePW":1.30},
+{"Country":"Panama","TimeUM":1.86,"TimeUW":4.60,"TimePM":5.40,"TimePW":3.08},
+{"Country":"Peru","TimeUM":2.11,"TimeUW":5.60,"TimePM":6.10,"TimePW":3.06},
+{"Country":"Poland","TimeUM":2.53,"TimeUW":4.60,"TimePM":4.16,"TimePW":2.30},
+{"Country":"Portugal","TimeUM":1.28,"TimeUW":5.03,"TimePM":4.48,"TimePW":2.66},
+{"Country":"Qatar","TimeUM":1.83,"TimeUW":3.31,"TimePM":3.81,"TimePW":2.00},
+{"Country":"Republic of Korea","TimeUM":7.83,"TimeUW":3.46,"TimePM":4.13,"TimePW":2.43},
+{"Country":"Republic of Moldova","TimeUM":2.66,"TimeUW":4.75,"TimePM":3.60,"TimePW":2.78},
+{"Country":"Réunion","TimeUM":2.40,"TimeUW":3.86,"TimePM":3.51,"TimePW":2.21},
+{"Country":"Romania","TimeUM":2.08,"TimeUW":4.40,"TimePM":2.71,"TimePW":1.66},
+{"Country":"Serbia","TimeUM":2.45,"TimeUW":4.98,"TimePM":3.76,"TimePW":2.11},
+{"Country":"Slovenia","TimeUM":2.83,"TimeUW":5.03,"TimePM":4.15,"TimePW":3.05},
+{"Country":"South Africa","TimeUM":1.61,"TimeUW":3.81,"TimePM":3.56,"TimePW":2.16},
+{"Country":"Spain","TimeUM":2.06,"TimeUW":4.55,"TimePM":3.73,"TimePW":2.35},
+{"Country":"State of Palestine","TimeUM":0.91,"TimeUW":4.88,"TimePM":4.15,"TimePW":0.60},
+{"Country":"Sweden","TimeUM":3.03,"TimeUW":3.83,"TimePM":5.08,"TimePW":4.20},
+{"Country":"Switzerland","TimeUM":2.58,"TimeUW":4.23,"TimePM":4.41,"TimePW":2.58},
+{"Country":"Thailand","TimeUM":0.9,"TimeUW":3.16,"TimePM":5.90,"TimePW":4.50},
+{"Country":"The former Yugoslav Republic of Macedonia","TimeUM":1.33,"TimeUW":4.01,"TimePM":3.38,"TimePW":1.85},
+{"Country":"Tunisia","TimeUM":0.71,"TimeUW":5.36,"TimePM":4.95,"TimePW":1.75},
+{"Country":"Turkey","TimeUM":1.51,"TimeUW":5.51,"TimePM":4.40,"TimePW":1.26},
+{"Country":"United Kingdom of Great Britain and Northern Ireland","TimeUM":2.18,"TimeUW":3.86,"TimePM":3.51,"TimePW":2.20},
+{"Country":"United Republic of Tanzania","TimeUM":1.06,"TimeUW":3.96,"TimePM":5.70,"TimePW":3.25},
+{"Country":"United States of America","TimeUM":2.63,"TimeUW":4.18,"TimePM":4.16,"TimePW":2.93},
+{"Country":"Uruguay","TimeUM":2.21,"TimeUW":5.13,"TimePM":4.75,"TimePW":2.76}];
+
+    $.each(data, function(i, p) {
+    $('#report-select').append($('<option>  </option>').val(i).html(p.Country));
+    });
+
+    function getSeries() {
+      var selected_series = $('#report-select2').val();
+      if (selected_series == "1") {
+        return [percentage(data[$('#report-select').val()]['TimePM']), percentage(data[$('#report-select').val()]['TimePW'])];
+      }
+      if (selected_series == "2") {
+          return [percentage(data[$('#report-select').val()]['TimeUM']), percentage(data[$('#report-select').val()]['TimeUW'])];
+      }
+    }
+
+    function percentage(num) {
+      return num * 100 / 8;
+    }
+  
+        var options = {
+          series: [20, 30],
           chart: {
+          id: 'chart1',
           height: 390,
           type: 'radialBar',
         },
@@ -19,7 +142,7 @@
               margin: 5,
               size: '60%',
               image: 'coin.png',
-	      imageWidth: 256,
+	            imageWidth: 256,
               imageHeight: 256,
               imageClipped: false
             },
@@ -38,27 +161,12 @@
         tooltip: {
                 enabled: true,
                 followCursor: true,
+                          y: {
+            formatter: function (val) {
+              return val * 8 / 100 + " Hours"
             },
-        legend: {
-          show: false,
-          floating: true,
-          fontSize: '16px',
-          position: 'left',
-          offsetX: 160,
-          offsetY: 15,
-          labels: {
-            useSeriesColors: true,
-          },
-          markers: {
-            size: 0
-          },
-          formatter: function(seriesName, opts) {
-            return seriesName + ":  " + opts.w.globals.series[opts.seriesIndex]
-          },
-          itemMargin: {
-            vertical: 3
-          }
-        },
+        }
+            },
         responsive: [{
           breakpoint: 480,
           options: {
@@ -71,5 +179,9 @@
 
         var chart = new ApexCharts(document.querySelector("#chart"), options);
         chart.render();
+  
+       function drawChart() {
+       chart.updateSeries(getSeries())
+       }
   </script>
 </body>
