add colors to words

--- a/Makeover Monday Week 14/index.html
+++ b/Makeover Monday Week 14/index.html
@@ -1,5 +1,7 @@
 <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<link rel="stylesheet" href="style.css" />
+<title>Unpaid work: Allocation of time and time-use</title>
 
 <body>
   <center><h1 id="title">The other side of the coin</h1>
@@ -10,7 +12,7 @@
     <option value="1">Paid and subsistence work</option>
     <option value="2">Unpaid domestic, care and volunteer work</option>
   </select>
-    <p>Explore how much time do men and women<br>
+    <p>Explore how much time do <span style="color:#1ab7ea">men</span> and <span style="color:#e040fb">women</span><br>
       spend doing paid or unpaid work.</p>
     </center>
 <script>
