--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="style.css" />
+<script src="script.js"></script>
+
 
 <!-- 
 <div class="jumbotron text-center" style="margin-bottom:0">
