--- a/index.html
+++ b/index.html
@@ -131,13 +131,7 @@
 
   <!-- Modal content -->
   <div class="modal-content">
-    <div class="modal-header">
-    <span class="close">&times;</span>
-    <h2>Modal Header</h2>
-  </div>
   <div class="modal-body">
-    <p>Some text in the Modal Body</p>
-    <p>Some other text...</p>
     <div class='tableauPlaceholder' id='viz1587234428844' style='position: relative'>
     <noscript>
         <a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ma&#47;MakeoverMondayWeek15CristianoRonaldovsLionelMessi&#47;STATS&#47;1_rss.png' style='border: none' /></a>
@@ -155,6 +149,7 @@
         <param name='display_spinner' value='yes' />
         <param name='display_overlay' value='yes' />
         <param name='display_count' value='yes' />
+	<param name='device' value='desktop'/>
     </object>
 </div>
   </div>
