--- a/index.html
+++ b/index.html
@@ -131,11 +131,14 @@
 
   <!-- Modal content -->
   <div class="modal-content">
-  <div class="modal-body">
-    <div class='tableauPlaceholder' id='viz1587234428844' style='position: relative'>
-    <noscript>
-        <a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ma&#47;MakeoverMondayWeek15CristianoRonaldovsLionelMessi&#47;STATS&#47;1_rss.png' style='border: none' /></a>
-    </noscript>
+	<div class="modal-header">
+    		<span class="close">&times;</span>
+  	</div>
+  	<div class="modal-body">
+    		<div class='tableauPlaceholder' id='viz1587234428844' style='position: relative'>
+    			<noscript>
+        		<a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ma&#47;MakeoverMondayWeek15CristianoRonaldovsLionelMessi&#47;STATS&#47;1_rss.png' style='border: none' /></a>
+    			</noscript>
     <object class='tableauViz' style='display:none;'>
         <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
         <param name='embed_code_version' value='3' />
