--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <param name='display_spinner' value='yes' />
         <param name='display_overlay' value='yes' />
         <param name='display_count' value='yes' />
-	<param name='device' value='desktop'/>
+	<param name='device' value='tablet'/>
     </object>
 </div>
   </div>
@@ -168,7 +168,7 @@
         vizElement.style.height = '827px';
     } else {
         vizElement.style.width = '100%';
-        vizElement.style.height = '977px';
+        vizElement.style.height = '827px';
     }
     var scriptElement = document.createElement('script');
     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
