--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         <span class="close" id="close">&times;</span>
     </div>
     <div class="modal-body">
+    </center>
         <div class='tableauPlaceholder' id='viz1587234428844' style='position: relative'>
           <noscript>
             <a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ma&#47;MakeoverMondayWeek15CristianoRonaldovsLionelMessi&#47;STATS&#47;1_rss.png' style='border: none' /></a>
@@ -153,7 +154,7 @@
         <param name='display_count' value='yes' />
   <param name='device' value='tablet'/>
     </object>
-</div>
+</div></center>
   </div>
 </div>
   </div>
@@ -202,7 +203,7 @@
         <span class="close" id="close3">&times;</span>
   </div>
   <div class="modal-body">
-   <div class="visme_d" data-url="76pqmwzz-makeover-monday-week-13" data-w="800" data-h="1034" data-domain="my"></div><p style="width:220px !important;border-radius:3px !important;padding:3px !important;font-size:12px !important;font-family:Arial, sans-serif !important;color:#314152 !important;white-space:nowrap !important">Made with <a href="https://www.visme.co/make-infographics?utm_source=CTA&amp;utm_medium=Embed" target="_blank" style="font-weight:600 !important;text-decoration:none !important;font-size:12px !important;font-family:Arial, sans-serif !important;color:#314152 !important;white-space:nowrap !important">Visme Infographic Maker</a></p>
+   <div class="visme_d" data-url="76pqmwzz-makeover-monday-week-13" data-w="800" data-h="1034" data-domain="my"></div>
   </div>
 </div>
   </div>
@@ -216,9 +217,11 @@
         <span class="close" id="close4">&times;</span>
   </div>
   <div class="modal-body">
+    <center>
     <div class='tableauPlaceholder' id='viz1590309131902' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;Week11visualization&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Week11visualization&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;Week11visualization&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' />
       <param name='device' value='tablet'/>
-      </object></div>  
+      </object></div> 
+      </center> 
   </div>
 </div>
   </div>
@@ -232,9 +235,11 @@
         <span class="close" id="close5">&times;</span>
   </div>
   <div class="modal-body">
+    <center>
     <div class='tableauPlaceholder' id='viz1590309242227' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ma&#47;MakeoverMondayWeek10-ViolenceAgainstWomenandGirls_15839457836310&#47;MM2020W10&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='MakeoverMondayWeek10-ViolenceAgainstWomenandGirls_15839457836310&#47;MM2020W10' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ma&#47;MakeoverMondayWeek10-ViolenceAgainstWomenandGirls_15839457836310&#47;MM2020W10&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' />
       <param name='device' value='tablet'/>
       </object></div>
+    </center>
   </div>
 </div>
   </div>
