--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@
         <span class="close" id="close">&times;</span>
     </div>
     <div class="modal-body">
-    </center>
         <div class='tableauPlaceholder' id='viz1587234428844' style='position: relative'>
           <noscript>
             <a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ma&#47;MakeoverMondayWeek15CristianoRonaldovsLionelMessi&#47;STATS&#47;1_rss.png' style='border: none' /></a>
@@ -152,9 +151,8 @@
         <param name='display_spinner' value='yes' />
         <param name='display_overlay' value='yes' />
         <param name='display_count' value='yes' />
-  <param name='device' value='tablet'/>
     </object>
-</div></center>
+</div>
   </div>
 </div>
   </div>
@@ -217,11 +215,8 @@
         <span class="close" id="close4">&times;</span>
   </div>
   <div class="modal-body">
-    <center>
     <div class='tableauPlaceholder' id='viz1590309131902' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;Week11visualization&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Week11visualization&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;Week11visualization&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' />
-      <param name='device' value='tablet'/>
       </object></div> 
-      </center> 
   </div>
 </div>
   </div>
@@ -235,11 +230,8 @@
         <span class="close" id="close5">&times;</span>
   </div>
   <div class="modal-body">
-    <center>
     <div class='tableauPlaceholder' id='viz1590309242227' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ma&#47;MakeoverMondayWeek10-ViolenceAgainstWomenandGirls_15839457836310&#47;MM2020W10&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='MakeoverMondayWeek10-ViolenceAgainstWomenandGirls_15839457836310&#47;MM2020W10' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ma&#47;MakeoverMondayWeek10-ViolenceAgainstWomenandGirls_15839457836310&#47;MM2020W10&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' />
-      <param name='device' value='tablet'/>
       </object></div>
-    </center>
   </div>
 </div>
   </div>
@@ -263,16 +255,8 @@
 <script type='text/javascript'>
     var divElement = document.getElementById('viz1587234428844');
     var vizElement = divElement.getElementsByTagName('object')[0];
-    if (divElement.offsetWidth > 800) {
-        vizElement.style.width = '1000px';
-        vizElement.style.height = '827px';
-    } else if (divElement.offsetWidth > 500) {
-        vizElement.style.width = '1000px';
-        vizElement.style.height = '827px';
-    } else {
-        vizElement.style.width = '100%';
-        vizElement.style.height = '827px';
-    }
+    vizElement.style.width = '100%';
+    vizElement.style.height = '827px';
     var scriptElement = document.createElement('script');
     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
     vizElement.parentNode.insertBefore(scriptElement, vizElement);
@@ -455,13 +439,8 @@
 <script type='text/javascript'>                   
   var divElement = document.getElementById('viz1590309131902');                    
   var vizElement = divElement.getElementsByTagName('object')[0];                    
-    if ( divElement.offsetWidth > 800 ) {  
-      vizElement.style.width='1000px';vizElement.style.height='642px';
-    } else if ( divElement.offsetWidth > 500 ) {
-      vizElement.style.width='1000px';vizElement.style.height='642px';
-    } else { 
-      vizElement.style.width='100%';vizElement.style.height='727px';
-    }                     
+      vizElement.style.width='100%';
+      vizElement.style.height='727px';             
   var scriptElement = document.createElement('script');                    
   scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';             
   vizElement.parentNode.insertBefore(scriptElement, vizElement);                
@@ -470,13 +449,8 @@
   <script type='text/javascript'>                    
     var divElement = document.getElementById('viz1590309242227');                    
     var vizElement = divElement.getElementsByTagName('object')[0];                    
-    if ( divElement.offsetWidth > 800 ) { 
-      vizElement.style.width='1100px';vizElement.style.height='627px';
-    } else if ( divElement.offsetWidth > 500 ) { 
-      vizElement.style.width='1100px';vizElement.style.height='627px';
-    } else { 
-      vizElement.style.width='100%';vizElement.style.height='727px';
-    }                     
+    vizElement.style.width='100%';
+    vizElement.style.height='727px';                  
     var scriptElement = document.createElement('script');                    
     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
     vizElement.parentNode.insertBefore(scriptElement, vizElement);                
