fixed chart sizes

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
         <param name='display_spinner' value='yes' />
         <param name='display_overlay' value='yes' />
         <param name='display_count' value='yes' />
+        <param name='device' value='tablet'/>
     </object>
 </div>
   </div>
@@ -216,6 +217,7 @@
   </div>
   <div class="modal-body">
     <div class='tableauPlaceholder' id='viz1590309131902' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;Week11visualization&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Week11visualization&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;Week11visualization&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' />
+      <param name='device' value='tablet'/>
       </object></div> 
   </div>
 </div>
@@ -231,6 +233,7 @@
   </div>
   <div class="modal-body">
     <div class='tableauPlaceholder' id='viz1590309242227' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ma&#47;MakeoverMondayWeek10-ViolenceAgainstWomenandGirls_15839457836310&#47;MM2020W10&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='MakeoverMondayWeek10-ViolenceAgainstWomenandGirls_15839457836310&#47;MM2020W10' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ma&#47;MakeoverMondayWeek10-ViolenceAgainstWomenandGirls_15839457836310&#47;MM2020W10&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' />
+            <param name='device' value='tablet'/>
       </object></div>
   </div>
 </div>
