Datagram thumbnail fixed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="row">
     <div class="col-lg-4 col-sm-6 mb-4">
       <div class="card h-100" id="myBtn8">
-        <a href="#"><img class="card-img-top" src="https://raw.githubusercontent.com/Obalfour/infovis-itba/gh-pages/Popular%20Names/Popular%20Names%20Thumbnail.png" alt=""></a>
+        <a href="#"><img class="card-img-top" src="https://raw.githubusercontent.com/Obalfour/infovis-itba/gh-pages/TP%20Datos%20Personales/Datagram%20Thumbnail.png" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a>Datagram</a>
