--- a/index.html
+++ b/index.html
@@ -651,6 +651,7 @@ var btn4 = document.getElementById("myBtn4");
 var btn5 = document.getElementById("myBtn5");
 var btn6 = document.getElementById("myBtn6");
 var btn7 = document.getElementById("myBtn7");
+var btn8 = document.getElementById("myBtn8");
 
 // Get the <span> element that closes the modal
 var span = document.getElementById("close");
@@ -660,6 +661,7 @@ var span4 = document.getElementById("close4");
 var span5 = document.getElementById("close5");
 var span6 = document.getElementById("close6");
 var span7 = document.getElementById("close7");
+var span8 = document.getElementById("close8");
 
 // When the user clicks on the button, open the modal
 btn.onclick = function() {
