trying an avatar image

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <!-- Page Content -->
 <div class="container">
 
+  <img style="width: 100px; position: absolute;top: 0px; right: 0px;"src='https://avataaars.io/?avatarStyle=Circle&topType=ShortHairShaggyMullet&accessoriesType=Round&hairColor=BrownDark&facialHairType=BeardLight&facialHairColor=Brown&clotheType=CollarSweater&clotheColor=Black&eyeType=Default&eyebrowType=Default&mouthType=Smile&skinColor=Light'/>
+  
   <!-- Page Heading -->
   <h1 class="my-4">#Visualizations
     <!--<small>Secondary Text</small>-->
