change position of avatar

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 <!-- Page Content -->
 <div class="container">
 
-  <img style="width: 100px; position: absolute;top: 0px; right: 0px;"src='https://avataaars.io/?avatarStyle=Circle&topType=ShortHairShaggyMullet&accessoriesType=Round&hairColor=BrownDark&facialHairType=BeardLight&facialHairColor=Brown&clotheType=CollarSweater&clotheColor=Black&eyeType=Default&eyebrowType=Default&mouthType=Smile&skinColor=Light'/>
-  
+  <div>
   <!-- Page Heading -->
-  <h1 class="my-4">#Visualizations
+    <h1 class="my-4">#Visualizations
     <!--<small>Secondary Text</small>-->
-  </h1>
+    </h1>
+    <img style="width: 80px; position: absolute;top: 30px; right: 30px;"src='https://avataaars.io/?avatarStyle=Circle&topType=ShortHairShaggyMullet&accessoriesType=Round&hairColor=BrownDark&facialHairType=BeardLight&facialHairColor=Brown&clotheType=CollarSweater&clotheColor=Black&eyeType=Default&eyebrowType=Default&mouthType=Smile&skinColor=Light'/>
+  <div>
 
   <div class="row">
     <div class="col-lg-4 col-sm-6 mb-4">
