--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
   <div>
   <!-- Page Heading -->
+    <img style="width: 100px;"src='https://avataaars.io/?avatarStyle=Circle&topType=ShortHairShaggyMullet&accessoriesType=Round&hairColor=BrownDark&facialHairType=BeardLight&facialHairColor=Brown&clotheType=CollarSweater&clotheColor=Black&eyeType=Default&eyebrowType=Default&mouthType=Smile&skinColor=Light'/>
     <h1 class="my-4">#Visualizations
     <!--<small>Secondary Text</small>-->
     </h1>
-    <img style="width: 80px; position: absolute;top: 30px; right: 30px;"src='https://avataaars.io/?avatarStyle=Circle&topType=ShortHairShaggyMullet&accessoriesType=Round&hairColor=BrownDark&facialHairType=BeardLight&facialHairColor=Brown&clotheType=CollarSweater&clotheColor=Black&eyeType=Default&eyebrowType=Default&mouthType=Smile&skinColor=Light'/>
   <div>
 
   <div class="row">
