--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <!-- Page Content -->
 <div class="container">
 
-  <div>
+  <div style="display: flex;
+    align-items: center;">
   <!-- Page Heading -->
     <img style="width: 100px;"src='https://avataaars.io/?avatarStyle=Circle&topType=ShortHairShaggyMullet&accessoriesType=Round&hairColor=BrownDark&facialHairType=BeardLight&facialHairColor=Brown&clotheType=CollarSweater&clotheColor=Black&eyeType=Default&eyebrowType=Default&mouthType=Smile&skinColor=Light'/>
     <h1 class="my-4">#Visualizations
