--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 <div class="container">
 
   <div class="row" style="display: flex;
-    align-items: center;">
+    align-items: center; justify-content: space-between;">
   <!-- Page Heading -->
-    <img style="width: 100px;"src='https://avataaars.io/?avatarStyle=Circle&topType=ShortHairShaggyMullet&accessoriesType=Round&hairColor=BrownDark&facialHairType=BeardLight&facialHairColor=Brown&clotheType=CollarSweater&clotheColor=Black&eyeType=Default&eyebrowType=Default&mouthType=Smile&skinColor=Light'/>
     <h1 class="my-4">#Visualizations
     <!--<small>Secondary Text</small>-->
     </h1>
+    <img style="width: 100px;"src='https://avataaars.io/?avatarStyle=Circle&topType=ShortHairShaggyMullet&accessoriesType=Round&hairColor=BrownDark&facialHairType=BeardLight&facialHairColor=Brown&clotheType=CollarSweater&clotheColor=Black&eyeType=Default&eyebrowType=Default&mouthType=Smile&skinColor=Light'/>
   <div>
 
   <div class="row">
