--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <h1 class="my-4">#Visualizations
     <!--<small>Secondary Text</small>-->
     </h1>
-    <img style="width: 100px;"src='https://avataaars.io/?avatarStyle=Circle&topType=ShortHairShaggyMullet&accessoriesType=Round&hairColor=BrownDark&facialHairType=BeardLight&facialHairColor=Brown&clotheType=CollarSweater&clotheColor=Black&eyeType=Default&eyebrowType=Default&mouthType=Smile&skinColor=Light'/>
+    <!--<img style="width: 100px;"src='https://avataaars.io/?avatarStyle=Circle&topType=ShortHairShaggyMullet&accessoriesType=Round&hairColor=BrownDark&facialHairType=BeardLight&facialHairColor=Brown&clotheType=CollarSweater&clotheColor=Black&eyeType=Default&eyebrowType=Default&mouthType=Smile&skinColor=Light'/>-->
+    <img style="width: 100px;"src='./avataaars.svg' />
   <div>
 
   <div class="row">
