--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
+<head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 <link rel="stylesheet" href="style.css" />
+<meta property="og:title" content="Information Visualization Portfolio"/>
+<meta property="og:description" content="Designed by Oliver Balfour"/>
+<meta property="og:image" content="./portfolio.png">
+
+</head>
+<body>
+
+
 
 <title>Information Visualization Portfolio</title>
 
@@ -754,3 +763,4 @@ window.onclick = function(event) {
   }
 }
 </script>
+</body>
