meta tags fixed

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 <link rel="stylesheet" href="style.css" />
 <meta property="og:title" content="Information Visualization Portfolio"/>
-<meta property="og:description" content="Designed by Oliver Balfour"/>
-<meta property="og:image" content="./portfolio.png">
+<meta property="og:description" content="A compilation of visualizations designed by Oliver Balfour."/>
+<meta property="og:image" content="https://raw.githubusercontent.com/Obalfour/infovis-itba/gh-pages/portfolio.png">
 
 </head>
 <body>
