--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
         <span class="close" id="close3">&times;</span>
   </div>
   <div class="modal-body">
-   <div class="visme_d" data-url="76pqmwzz-makeover-monday-week-13" data-w="800" data-h="1034" data-domain="my"></div>
+   <!-- <div class="visme_d" data-url="76pqmwzz-makeover-monday-week-13" data-w="800" data-h="1034" data-domain="my"></div> -->
+   <center>
+        <img src="https://raw.githubusercontent.com/Obalfour/infovis-itba/master/Makeover%20Monday%20Week%2013/Week%2013%20visualization.jpg">
+   </center>
   </div>
 </div>
   </div>
