--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         <span class="close" id="close9">&times;</span>
     </div>
     <div class="modal-body">
-<div class='tableauPlaceholder' id='viz1647037516139' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Preguntados_16110713976240&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='es-ES' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1647037516139');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>    </div>
+<div class='tableauPlaceholder' id='viz1647037516139' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Preguntados_16110713976240&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='es-ES' /></object></div></div>
   </div>
 </div>
 
@@ -535,6 +535,17 @@
     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
     vizElement.parentNode.insertBefore(scriptElement, vizElement);                
   </script>
+  
+  <script type='text/javascript'>                    
+    var divElement = document.getElementById('viz1647037516139');                    
+    var vizElement = divElement.getElementsByTagName('object')[0];                    
+    vizElement.style.width='100%';
+    vizElement.style.height='827px'';                    
+    var scriptElement = document.createElement('script');                    
+    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+    vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+  </script>
+
 
 <script type='text/javascript'>
 var modal=null,btn=document.getElementById("myBtn1"),btn2=document.getElementById("myBtn2"),btn3=document.getElementById("myBtn3"),btn4=document.getElementById("myBtn4"),btn5=document.getElementById("myBtn5"),btn6=document.getElementById("myBtn6"),btn7=document.getElementById("myBtn7"),btn8=document.getElementById("myBtn8"),btn9=document.getElementById("myBtn9"),span=document.getElementById("close"),span2=document.getElementById("close2"),span3=document.getElementById("close3"),span4=document.getElementById("close4"),span5=document.getElementById("close5"),span6=document.getElementById("close6"),span7=document.getElementById("close7"),span8=document.getElementById("close8"),span9=document.getElementById("close9");btn.onclick=function(){(modal=document.getElementById("myModal1")).style.display="block"},btn2.onclick=function(){(modal=document.getElementById("myModal2")).style.display="block"},btn3.onclick=function(){(modal=document.getElementById("myModal3")).style.display="block"},btn4.onclick=function(){(modal=document.getElementById("myModal4")).style.display="block"},btn5.onclick=function(){(modal=document.getElementById("myModal5")).style.display="block"},btn6.onclick=function(){(modal=document.getElementById("myModal6")).style.display="block"},btn7.onclick=function(){(modal=document.getElementById("myModal7")).style.display="block"},btn8.onclick=function(){(modal=document.getElementById("myModal8")).style.display="block"},btn9.onclick=function(){(modal=document.getElementById("myModal9")).style.display="block"},span.onclick=function(){modal.style.display="none",location.reload()},span2.onclick=function(){modal.style.display="none"},span3.onclick=function(){modal.style.display="none"},span4.onclick=function(){modal.style.display="none",location.reload()},span5.onclick=function(){modal.style.display="none",location.reload()},span6.onclick=function(){modal.style.display="none"},span7.onclick=function(){modal.style.display="none"},span8.onclick=function(){modal.style.display="none",location.reload()},span9.onclick=function(){modal.style.display="none",location.reload()},window.onclick=function(n){n.target==modal&&(modal.style.display="none",location.reload())};
