--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
     var divElement = document.getElementById('viz1647037516139');                    
     var vizElement = divElement.getElementsByTagName('object')[0];                    
     vizElement.style.width='100%';
-    vizElement.style.height='827px'';                    
+    vizElement.style.height='827px';                    
     var scriptElement = document.createElement('script');                    
     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
     vizElement.parentNode.insertBefore(scriptElement, vizElement);                
